Fix failing to serialize Collection or Map with inaccessible constructor
Also remove tests which rely on Java implementation details.